Gnome: Fix wrong color causing red border in sidebars

--- a/gtk-4.0/gtk.css
+++ b/gtk-4.0/gtk.css
@@ -3857,7 +3857,7 @@ treeview ~ scrollbar.vertical {
 .sidebar {
   border-style: none;
   border-width: 0;
-  background-color: #ba706e; }
+  background-color: #191f22; }
   stacksidebar.sidebar:dir(ltr) list, stacksidebar.sidebar.left list, stacksidebar.sidebar.left:dir(rtl) list, .sidebar:dir(ltr), .sidebar.left, .sidebar.left:dir(rtl) {
     border-right: none;
     border-left-style: none; }
